<resources>

    <string name="app_name">BioAnalytical Sciences</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>

    <string name="menu_search">Search</string>

    <string name="menu_bookmark">Bookmark</string>

    <string name="menu_share">Share</string>

    <string name="menu_settings">Settings</string>

    <string name="menu_about">About</string>

    <string name="menu_privacy">Privacy Policy</string>

    <string name="menu_help">How to Use</string>
    <string name="app_subtitle">Learning • Reference • Research</string>
    <string name="bookmarks">Bookmarks</string>

<string name="clear_all_bookmarks">Clear All Bookmarks</string>

<string name="no_bookmarks">No bookmarks available</string>
    <string name="no_bookmarks">
    No bookmarks yet
</string>

<string name="no_bookmarks_message">
    Bookmark your favourite chapters to access them quickly.
</string>
    <string name="clear_bookmarks_title">Clear Bookmarks</string>

<string name="clear_bookmarks_message">
Are you sure you want to remove all bookmarks?
</string>

<string name="yes">Yes</string>

<string name="no">No</string>
    <string name="history">History</string>

<string name="clear_history">Clear History</string>

<string name="no_history">No history yet</string>

<string name="no_history_message">
Recently viewed chapters will appear here.
</string>

<string name="clear_history_title">
Clear History
</string>

<string name="clear_history_message">
Are you sure you want to remove your reading history?
</string>

</resources>
